# mkinit-rs

./: Cargo.toml
examples/: __init__.py  example1.py
examples/project1/: __init__.py  example1.py
examples/project1/sub1/: __init__.py  sub1_mod.py
src/: codegen.rs  main.rs  parser.rs
