[package]
name = "mkinit-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
walkdir = "2.5.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.12" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.12" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.12" }
